# simple-wechat-payment-receiver

./: .gitignore  LICENSE  README.md  SECURITY.md  linux_agent.py  pyproject.toml  receiver_core.py  windows_agent.py
.github/workflows/: tests.yml
configs/: linux.example.json  windows.example.json
deploy/linux/: receiver.env.example  wechat-payment-receiver.service.example
examples/: webhook_receiver.py
scripts/windows/: run-agent.ps1  wechat_ocr.ps1
tests/: test_core.py  test_platforms.py
